# github-semantic-issues

./: Cargo.toml
.github/workflows/: run.yml
data/: labels.toml  repos.toml
